<resources>
    <string name="app_name">TimeTrackerApp</string>
    <string name="nothing"> </string>
    <string name="btnSchedule">View Schedule</string>
    <string name="btnStatistics">View Statistics</string>
    <string name="tvSelectedDate">Select a date</string>
    <string name="btnAddEvent">View date</string>
    <string name="tvReminder"> </string>
    <string name="tvReminder2">If you accidentally deleted an item, click View button again, nothing will save until you return to the previous page. </string>
    <string name="et_EventName">Enter event name</string>
    <string name="tvStartingTime">Insert starting time</string>
    <string name="tvEndingTime">Insert ending time</string>
    <string name="btnView">View</string>
    <string name="btnAdd">Add</string>
    <string name="rbtnDay">Yesterday</string>
    <string name="rbtnWeek">Last 7 days</string>
    <string name="rbtnMonth">Last 30 days</string>
    <string name="tvStatistic">Statistic</string>
    <string name="tvStatement">Do you know how many events you have added into the app?</string>
    <string name="tvStatement2">Click a radiobutton and you will see!</string>
    <string-array name="EventTypeArray">
        <item>Idle</item>
        <item>Studying</item>
        <item>Working</item>
        <item>Dining</item>
        <item>Tidying</item>
        <item>Bathing</item>
        <item>Hanging out</item>
        <item>Gaming</item>
        <item>Reading</item>
        <item>Watching TV</item>
        <item>Others</item>
    </string-array>
</resources>